--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <a class="nav-link" href="about.html"> About </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> What we do </a>
+                  <a class="nav-link" href="#team"> Our Team </a>
                 </li>
                 
                 <li class=" contactt">
