--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
                       
                       <div class="getstartedhero">
-                        <a href="getStartted.html" >
+                        <a href="Started.html" >
                           Get Started
                         </a>
                       </div>
