--- a/Started.html
+++ b/Started.html
@@ -37,13 +37,13 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">position <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Text</a>
+                  <a class="nav-link" href="#"></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Gps</a>
+                  <a class="nav-link" href="#"></a>
                 </li>
                
               </ul>
@@ -60,27 +60,50 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <div style="margin-top: 10%; margin-left: 20%;" class="row">
-                <div class="col">
+
+
+                <div class="row" style="margin-top: 1%; margin-left: 3%; margin-right: 3%; font-size: 1.5em;">
+                <div class="col" style=" margin-left: 8%; margin-right: 3%; ">POSITION</div>
+                <div class="col" style=" margin-left: 20%; margin-right: 3%;">TEXT</div>
+                <div class="col" style=" margin-left: 20%; margin-right: 3%;">GPS</div>
+               </div>
+
+
+
+
+
+
+
+
+
+                <div class="row">
+                    <div class="col animated-border " style=" margin:3%">
+              <div style="margin-top: 10%; margin-left: 12%; " class="row">
+                <div class="col " style="margin-bottom: 4%;" >
                   <div class="getstartedhero" id="angle" >Angle: 0°</div>
-                </div>
+                </div><br/>
                 <div class="col">
                   <div class="getstartedhero" id="force">Force: 0</div>
                 </div>
               </div>
-              <div class="row" style="margin-left: 41%; margin-top: 3%;">
+              <div class="row" style="margin-left: 3%; margin-top: 3%;">
                 <div class="col">
                   <div>
                     <hr />
                     <div style="width: 228px; height: 228px; left: 20px; top: 250px; z-index: 100000;">
                       <img style="width: 170px; height: 170px;" src="images/joystick-base.png" />
-                      <div id="stick1" style="left: 68px; top: 85px; position: absolute; z-index: 1000000;">
+                      <div id="stick1" style="left: 98px; top: 85px; position: absolute; z-index: 1000000;">
                         <img src="images/ball4.png" />
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="col animated-border" style=" margin:3%">1</div>
+            <div class="col animated-border" style=" margin:3%">3</div>
+            </div>
+            
             </div>
           </div>
         </div>
